@@ -5,7 +5,8 @@ Process Hacker
    * Network tab - shows current network connections
    * KProcessHacker - a kernel-mode driver for Process Hacker which 
      finally enables Process Hacker to display all file handles and 
-     have full control over the system
+     have full control over the system. Note that this will NOT 
+     bypass user-mode rootkits like HackerDefender!
  * FIXED:
    * Now the process tree and service list update instantly after 
      starting Process Hacker instead of waiting
